# polymarket-btc-bot

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_dev.bat  run_live.bat  setup.bat  setup.py  taskscheduler.bat
config/: default.yaml
docs/: INSTALLATION.md
scripts/: run_live.sh  setup.sh
src/: __init__.py  bot.py  config.py
src/feeds/: binance.py  clob.py
src/market/: discovery.py  models.py  pricing.py
src/probability/: model.py
src/trading/: logic.py  orders.py
src/utils/: logger.py
tests/: test_probability_model.py
